# revsport-api

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt  tasks.py
src/revsport/: __init__.py  api.py
